# asset-manager

./: .gitignore  Cargo.toml  README.md  build.sh
copydog/: Cargo.toml
copydog-ffi/: Cargo.toml  build.rs  cbindgen.toml  copydog.h
copydog-ffi/src/: lib.rs  tests.rs
copydog-qt/src/: aboutwindow.cpp  aboutwindow.ui  config.h  copydog-qt.pro  copydog.h  filetypesetting.cpp  filetypesetting.h  filetypesetting.ui  ignorefolderitem.cpp  ignorefolderitem.h  ignorefolderitem.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  versions.h  watcher.h
copydog/src/: config.rs  lib.rs  main.rs  watch.rs
copydog/tests/: watcher.rs
copydog/tests/source/: config.toml
src/: asset.rs  blender.rs  lib.rs  main.rs  stats.rs  texture.rs
tests/: watcher.rs
tests/source/: config.toml
