[package]
name = "copydogffi"
version = "0.1.0"
authors = ["Petr Volf <petr.volf216@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copydog = { path= "../copydog" }

[build-dependencies]
cbindgen = "0.14.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
